# GWXtreme

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml  release.yml
.ipynb_checkpoints/: setup-checkpoint.cfg  setup-checkpoint.py
GWXtreme/: .eos_model_selection.py.swp  bounded_2d_kde.py  eos_model_selection.py  eos_prior.py  parametrized_eos_sampler.py
GWXtreme/.ipynb_checkpoints/: eos_model_selection-checkpoint.py  parametrized_eos_sampler-checkpoint.py
docs/: code.rst  conf.py  index.rst  requirements.txt
docs/_build/doctrees/: code.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/GWXtreme/: getPosteriorSupport.html
docs/_build/html/_sources/: code.rst.txt  index.rst.txt
docs/source/: conf.py  gwxtreme.rst  index.rst  inference_methods.rst  installation.rst
docs/source/examples/: index.rst  model_selection.rst  parameterized_inference.rst
extras/: aggregator  cleandir.sh  combine_jsons.py  combine_results  combine_stacked_results  comp_eos_evidence  comp_stacked_evidence  driver  driver_parametrized.py  submit.sh  write_dag.py
src/gwxtreme/: density_estimation.py  eos_inference.py  eos_interpolator.py  eos_prior.py  usage_scripts.py  utils.py
tests/: APR4_EPP_mass_lambda.txt  APR4_EPP_mass_radius_k.txt  GW170817_posterior_samples_IMRPhenomNRT_uniform_lambdas_prior.json  conftest.py  test_eos_inference.py  test_model_selection.py
tools/: combine_results  combine_stacked_results  comp_eos_evidence  comp_stacked_evidence  write_dag.py
