[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[project]
name = "gwxtreme"
version = "2.0"
authors = [
  { name="Joseph David Quinn-Vitabile", email="quinnvi2@uwm.edu" },
  { name="Shaon Ghosh", email="ghoshs@montclair.edu" },
  { name="Anarya Ray", email="anarya.ray@northwestern.edu" },
  { name="Jolien Creighton", email="jolien@uwm.edu" },
]
description = "Neutron star equation-of-state inference from gravitational-wave observations of binary neutron star mergers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "emcee",
    "tqdm",
    "matplotlib",
    "lalsuite",
    "ray>=2.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gwxtreme"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/shaonghosh/GWXtreme"
