[bdist_wheel]
universal = 1

[coverage:run]
source = GWXtreme
parallel = True
concurrency =
    thread
    multiprocessing

[metadata]
name = GWXtreme
version = 0.0.1
license = GPL-2+
author = Shaon Ghosh
author_email = shaon.ghosh@ligo.org
description = Tools for equations state model selection of neutron star using posterior samples of uniform prior LambdaT runs
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
;     Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    scipy
    matplotlib
    numpy
    lalsuite
    sphinx
