[bdist_wheel]
universal = 1

[coverage:run]
source = GWXtreme
parallel = True
concurrency =
    thread
    multiprocessing

[metadata]
name = GWXtreme
version = 0.3.1
license = GPL-2+
author = Shaon Ghosh
author_email = shaon.ghosh@ligo.org
description = Tools for inferences on extreme matter using gravitational wave parameter estimation data.
url = https://github.com/shaonghosh/GWXtreme
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    scipy
    matplotlib
    numpy
    lalsuite
    sphinx
    h5py
    corner
    emcee
    ray[default]

